feat: setup authentication + authorization (#32)
* setup OIDC auth in backend + Pocket ID

* setup auth on frontend + fix tests

* add basic auth tests
